--- a/client/index.html
+++ b/client/index.html
@@ -122,7 +122,7 @@
         <div class="micro-state-selected">
             <p><small>Just a simple list.</small>
             <p class="xgroup">
-                <a href="/lists/new" class="listling-use-case-create-list action xaction-subtle"><i class="fa fa-paper-plane"></i> Start</a>
+                <a class="listling-use-case-create-list action xaction-subtle"><i class="fa fa-paper-plane"></i> Start</a>
             </p>
             <p style="color: #888;">or view <button is="micro-button" class="listling-use-case-create-example link"><i class="fa fa-book"></i> Example</button></p>
         </div>
@@ -243,7 +243,7 @@
             <header>
                 <h1>
                     <span class="view"></span>
-                    <label class="edit"><input name="title" placeholder="Title" /></label>
+                    <label class="edit"><input name="title" placeholder="List title" /></label>
                 </h1>
 
                 <ul is="micro-menu" class="view">
