--- a/client/index.html
+++ b/client/index.html
@@ -418,9 +418,10 @@
             <div class="listling-item-content">
                 <p class="listling-item-mode-view micro-multiline" data-content="item.text"></p>
                 <label class="listling-item-mode-edit">
-                    <textarea name="text" placeholder="Text (optional)"
+                    <micro-text-entity-input></micro-text-entity-input>
+                    <!--<textarea name="text" placeholder="Text (optional)"
                               data-value="or item.text ''">
-                    </textarea>
+                    </textarea>-->
                 </label>
 
                 <p class="listling-detail listling-item-mode-view" title="Edited by">
